# python-stocks

./: Dockerfile  README.md  Untitled.ipynb  Untitled1.ipynb  app.py  case.ipynb  create.py  db.db  movimentacoes.xlsx  pyproject.toml  requirements.txt  send.xlsx
python_stocks/: auth.py  db.db  finance.py  models.py  schemas.py
tests/: conftest.py  db.db  test_python_stocks.py
